@@ -31,7 +31,7 @@ AboutWindow::AboutWindow(QWidget *parent)
     //a QLabel can only set one pixmap or text, so I use two QLabel
     QPixmap icon(":/warmth.png");
     icon=icon.scaled(64,64);
-    QLabel *iconLabel = new QLabel;
+    QLabel *iconLabel = new QLabel(this);
     iconLabel->setPixmap(icon);
     //iconLabel->setScaledContents(true);
     QString a;
@@ -42,15 +42,15 @@ AboutWindow::AboutWindow(QWidget *parent)
     a.append(tr(" (Compiled in Qt "));
     a.append(QT_VERSION_STR);
     a.append(")");
-    QLabel *name = new QLabel;
+    QLabel *name = new QLabel(this);
     name->setText(a);
     name->setWordWrap(true);
     okButton = new QPushButton(tr("&OK"));
     aboutTabs = new QTabWidget;
-    aboutTabs->addTab(new WarmthPage,tr("&About"));
-    aboutTabs->addTab(new MentohustPage,tr("About &MentoHust"));
+    aboutTabs->addTab(new WarmthPage(this),tr("&About"));
+    aboutTabs->addTab(new MentohustPage(this),tr("About &MentoHust"));
 
-    setAttribute(Qt::WA_DeleteOnClose);
+    setAttribute(Qt::WA_DeleteOnClose,true);
 
     connect(okButton, SIGNAL(clicked()), this, SLOT(close()));
     QGridLayout *topLayout = new QGridLayout;
@@ -61,7 +61,7 @@ AboutWindow::AboutWindow(QWidget *parent)
     buttonLayout->addStretch();
     buttonLayout->addWidget(okButton);
     buttonLayout->addStretch();
-    QVBoxLayout *mainLayout = new QVBoxLayout;
+    QVBoxLayout *mainLayout = new QVBoxLayout(this);
     mainLayout->addLayout(topLayout);
     mainLayout->addWidget(aboutTabs);
     mainLayout->addLayout(buttonLayout);
@@ -79,20 +79,20 @@ AboutWindow::~AboutWindow()
 
 MentohustPage::MentohustPage(QWidget *parent)
 {
-    QLabel *aboutMentohust = new QLabel;
+    QLabel *aboutMentohust = new QLabel(this);
     aboutMentohust->setWordWrap(true);
     aboutMentohust->setText(tr("<p><big><b>MentoHust</b></big> Version 0.3.1</p>"
                                     "<p>&nbsp;&nbsp;a ruijie authentication client</p>"
                                     "<p><b>Authors: </b></p>"
                                "<p><address>&nbsp;&nbsp;HustMoon</address> &lt;mentohust@ehust.co.cc&gt;</p>"
                                "<p><address>&nbsp;&nbsp;kkHAIKE</address> &lt;kkHAIKE@gmail.com&gt;</p>"));
-    QScrollArea *scrollText = new QScrollArea;
+    QScrollArea *scrollText = new QScrollArea(this);
     scrollText->setWidget(aboutMentohust);
 
-    QVBoxLayout *mainLayout=new QVBoxLayout;
+    QVBoxLayout *mainLayout=new QVBoxLayout(this);
     mainLayout->addWidget(aboutMentohust);
     setLayout(mainLayout);
-    setAttribute(Qt::WA_DeleteOnClose);
+    setAttribute(Qt::WA_DeleteOnClose,true);
 }
 MentohustPage::~MentohustPage()
 {
@@ -100,19 +100,19 @@ MentohustPage::~MentohustPage()
 
 WarmthPage::WarmthPage(QWidget *parent)
 {
-    QLabel *about = new QLabel;
+    QLabel *about = new QLabel(this);
     about->setWordWrap(true);
     about->setText(tr("<p><big>A GUI front end for MentoHust</big></p>"
                       "<p>Copyright &copy; 2012 <address>Aten Zhang</address></p>"
                       "<p>Homepage: </p>"
-                      "<p><a href=http://code.google.com/p/warmth>http://code.google.com/p/warmth</a></p>"
+                      "<p><a href=\"http://code.google.com/p/warmth\"> http://code.google.com/p/warmth </a></p>"
                       "<br />"
                       "License: "
-                      "<p><a href=http://www.gnu.org/licenses/gpl.txt>GNU General Public License Version 3</a></p>"));
-    QVBoxLayout *mainLayout=new QVBoxLayout;
+                      "<p><a href=\"http://www.gnu.org/licenses/gpl.txt\"> GNU General Public License Version 3 </a></p>"));
+    QVBoxLayout *mainLayout=new QVBoxLayout(this);
     mainLayout->addWidget(about);
     setLayout(mainLayout);
-    setAttribute(Qt::WA_DeleteOnClose);
+    setAttribute(Qt::WA_DeleteOnClose,true);
 }
 
 WarmthPage::~WarmthPage()
